<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_songs">

    <fragment
        android:id="@+id/navigation_songs"
        android:name="edu.put.grooveglider.ui.SongsFragment"
        android:label="@string/title_songs"
        tools:layout="@layout/fragment_songs" />

    <fragment
        android:id="@+id/navigation_server"
        android:name="edu.put.grooveglider.ui.ServerFragment"
        android:label="@string/title_server"
        tools:layout="@layout/fragment_server" />

    <fragment
        android:id="@+id/navigation_upload"
        android:name="edu.put.grooveglider.ui.UploadFragment"
        android:label="@string/title_upload"
        tools:layout="@layout/fragment_upload" />
</navigation>