<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_setup_relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/icon_dark">

    <LinearLayout
        android:id="@+id/layout_setup_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:background="@color/icon_dark">

        <ImageView
            android:id="@+id/logo_setup"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/logo" />

        <ProgressBar
            android:id="@+id/logo_loader"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:indeterminate="true"
            android:indeterminateTint="@color/icon_orange"
            android:progressTint="@color/icon_orange"
            android:visibility="gone"
            />

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:autofillHints="false"
            android:background="@drawable/text_background"
            android:gravity="center_horizontal"
            android:hint="@string/title"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true"
            android:textColorHint="@color/light_gray"
            android:textColor="@color/light_gray"
            android:textCursorDrawable="@null"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890 "
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:autofillHints="false"
            android:background="@drawable/text_background"
            android:gravity="center_horizontal"
            android:hint="@string/artist"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true"
            android:textColorHint="@color/light_gray"
            android:textColor="@color/light_gray"
            android:textCursorDrawable="@null"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890 "
            android:textSize="25sp"/>

        <Button
            android:id="@+id/button_choose_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/button_background"
            android:text="@string/choose_file"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:textColor="@color/icon_dark"/>

        <Button
            android:id="@+id/button_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/button_background"
            android:text="@string/upload"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:textColor="@color/icon_dark"/>

    </LinearLayout>

</RelativeLayout>

